PAL-999 updated common code, resolved import issues, updated tests