@@ -24,24 +24,24 @@ import org.junit.jupiter.params.provider.ArgumentsProvider;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
 import uk.gov.gchq.palisade.service.attributemask.ApplicationTestData;
+import uk.gov.gchq.palisade.service.attributemask.config.ApplicationConfiguration;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class MessageSerialisationTest {
-    private static final ObjectMapper MAPPER = new ObjectMapper();
+    private static final ObjectMapper MAPPER = new ApplicationConfiguration().objectMapper();
 
     static class MessageTypeSource implements ArgumentsProvider {
         @Override
-        public Stream<? extends Arguments> provideArguments(final ExtensionContext extensionContext) throws Exception {
+        public Stream<? extends Arguments> provideArguments(final ExtensionContext extensionContext) {
             return Stream.of(
                     Arguments.of(ApplicationTestData.REQUEST),
                     Arguments.of(ApplicationTestData.RESPONSE),
                     Arguments.of(AuditErrorMessage.Builder.create(
-                            ApplicationTestData.REQUEST,
-                            Collections.emptyMap())
+                            ApplicationTestData.REQUEST, Map.of("messagesSent", "23"))
                             .withError(new Throwable("test exception")))
             );
         }
@@ -53,10 +53,30 @@ class MessageSerialisationTest {
         // Given some test data
 
         // When a Request is serialised and deserialised
-        String serialisedRequest = MAPPER.writeValueAsString(message);
-        Object deserialisedRequest = MAPPER.readValue(serialisedRequest, message.getClass());
+        var actualJson = MAPPER.writeValueAsString(message);
+        var actualInstance = MAPPER.readValue(actualJson, message.getClass());
 
         // Then the deserialised object is unchanged (equal)
-        assertThat(deserialisedRequest).isEqualTo(message);
+        assertThat(actualInstance)
+                .as("Check that whilst using the objects toString method, the objects are the same")
+                .isEqualTo(message);
+
+        assertThat(actualInstance)
+                .as("Ignoring the error message, check %s using recursion", message.getClass().getSimpleName())
+                .usingRecursiveComparison()
+                .ignoringFieldsOfTypes(Throwable.class)
+                .isEqualTo(message);
+
+        // Test the exception of the AuditErrorMessage Test data
+        if (actualInstance instanceof AuditErrorMessage) {
+            if (((AuditErrorMessage) actualInstance).getError() != null) {
+                assertThat((AuditErrorMessage) actualInstance)
+                        .as("Extracting the exception, check it has been deserialised successfully")
+                        .extracting(AuditErrorMessage::getError)
+                        .isExactlyInstanceOf(Throwable.class)
+                        .extracting("Message")
+                        .isEqualTo("test exception");
+            }
+        }
     }
 }
